istio/manifests/order/virtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: order-virtual-service
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: order-route
      match:
        - uri:
            prefix: /orders/
      route:
        - destination:
            host: order-app-service.microservices-with-k8s.svc.cluster.local
            port:
              number: 80
